<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/action_home"
        android:icon="@mipmap/ic_action_name"
        android:title="@string/home" />

    <item
        android:id="@+id/action_favos"
        android:icon="@mipmap/ic_action_favo"
        android:title="@string/favorites" />


    <item
        android:id="@+id/languadges"
        android:title="@string/languages">
        <menu>
            <item
                android:id="@+id/action_custom"
                android:icon="@mipmap/ic_action_custom"
                android:title="@string/custom_language" />
            <item
                android:id="@+id/action_add"
                android:icon="@mipmap/ic_action_add"
                android:title="@string/add_language" />

            <item
                android:id="@+id/action_remove"
                android:icon="@mipmap/ic_action_remove"
                android:title="@string/remove_language" />

        </menu>
    </item>


    <item
        android:id="@+id/settings"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/action_theme"
                android:icon="@mipmap/ic_action_theme"
                android:title="@string/change_theme" />

            <item
                android:id="@+id/action_about"
                android:icon="@mipmap/ic_about"
                android:title="@string/about" />
        </menu>
    </item>
    <!--

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_menu_camera"
                android:title="Import" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Gallery" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Slideshow" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="Tools" />
        </group>

        <item android:title="Communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send" />
            </menu>
        </item>
    -->

</menu>
